# docs

./: build.rs  metadata.json
docs/: Cargo.toml  build.rs
docs/src/: lib.rs
pkg/: manifest.json
