[package]
name = "docs"
version = "0.1.2"
edition = "2021"

[build-dependencies]
anyhow = "1.0.71"
flate2 = "1.0"
kit = { git = "https://github.com/kinode-dao/kit", tag = "v0.9.1" }
tar = "0.4"
tokio = "1.28"

[dependencies]
anyhow = "1.0"
kinode_process_lib = "0.10.1"
process_macros = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
